bug correction on frontend, added scrollbar gutter to html

--- a/network/static/network/styles.css
+++ b/network/static/network/styles.css
@@ -1,5 +1,10 @@
+html {
+  scrollbar-gutter: stable;
+}
+
 .body {
   margin: 0 10rem 0 10rem;
+  padding-right: 1rem;
 }
 
 textarea {
